--- a/pom.xml
+++ b/pom.xml
@@ -198,8 +198,8 @@
     <logbackVersion>1.2.3</logbackVersion>
     <jackson1Version>1.9.13</jackson1Version>
     <jackson2Version>2.12.4</jackson2Version>
-    <spring-boot.version>2.3.6.RELEASE</spring-boot.version>
-    <springVersion>5.3.9</springVersion>
+    <spring-boot.version>2.5.7</spring-boot.version>
+    <springVersion>5.3.13</springVersion>
     <kubernetes-client.version>4.6.1</kubernetes-client.version>
     <flumeVersion>1.9.0</flumeVersion>
     <disruptorVersion>3.4.4</disruptorVersion>
