Restrict LDAP access via JNDI

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -349,6 +349,11 @@
       <artifactId>awaitility</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.zapodot</groupId>
+      <artifactId>embedded-ldap-junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
