--- a/log4j-appserver/pom.xml
+++ b/log4j-appserver/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
-    <version>2.15.1-SNAPSHOT</version>
+    <version>2.15.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
