--- a/log4j-samples/log4j-samples-configuration/pom.xml
+++ b/log4j-samples/log4j-samples-configuration/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>log4j-samples</artifactId>
     <groupId>org.apache.logging.log4j.samples</groupId>
-    <version>2.15.1-SNAPSHOT</version>
+    <version>2.15.0</version>
   </parent>
   <artifactId>log4j-samples-configuration</artifactId>
   <packaging>jar</packaging>
