--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
-    <version>2.15.1</version>
+    <version>2.16.0-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
 
