--- a/log4j-layout-template-json/pom.xml
+++ b/log4j-layout-template-json/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.16.0</version>
+    <version>2.17.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>log4j-layout-template-json</artifactId>
