--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -24,7 +24,7 @@
     <relativePath>../</relativePath>
   </parent>
   <artifactId>log4j-core</artifactId>
-  <version>${custom-log4j-core.version}</version>
+  <version>2.12.1-safe58</version>
   <packaging>jar</packaging>
   <name>Apache Log4j Core</name>
   <description>The Apache Log4j Implementation</description>
@@ -42,13 +42,13 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>${custom-log4j-base.version}</version>
+      <version>2.12.1</version>
     </dependency>
     <!-- Classes and resources to be shaded into the core jar -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core-java9</artifactId>
-      <version>${custom-log4j-base.version}</version>
+      <version>2.12.1</version>
       <scope>provided</scope>
       <type>zip</type>
     </dependency>
@@ -158,7 +158,7 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>${custom-log4j-base.version}</version>
+      <version>2.12.1</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -359,7 +359,7 @@
                 <artifactItem>
                   <groupId>org.apache.logging.log4j</groupId>
                   <artifactId>log4j-core-java9</artifactId>
-                  <version>${custom-log4j-base.version}</version>
+                  <version>2.12.1</version>
                   <type>zip</type>
                   <overWrite>false</overWrite>
                 </artifactItem>
