--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
-    <version>2.12.2-SNAPSHOT</version>
+    <version>2.12.2</version>
     <relativePath>../</relativePath>
   </parent>
 
@@ -67,7 +67,7 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-jpa</artifactId>
-      <version>2.12.2-SNAPSHOT</version>
+      <version>2.12.2</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
