--- a/log4j-mongodb3/pom.xml
+++ b/log4j-mongodb3/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.12.2</version>
+    <version>2.12.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
