--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -24,14 +24,12 @@
     <relativePath>../</relativePath>
   </parent>
   <artifactId>log4j-core</artifactId>
-  <version>2.12.1-safe58</version>
+  <version>2.12.1.sec1</version>
   <packaging>jar</packaging>
   <name>Apache Log4j Core</name>
   <description>The Apache Log4j Implementation</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
-    <custom-log4j-base.version>2.12.1</custom-log4j-base.version>
-    <custom-log4j-core.version>2.12.1-safe58</custom-log4j-core.version>
 
     <docLabel>Core Documentation</docLabel>
     <projectDir>/core</projectDir>
