--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
@@ -57,6 +57,7 @@
     <pmd.failurePriority>2</pmd.failurePriority>
     <deploy.plugin.version>2.8.2</deploy.plugin.version>
     <rat.plugin.version>0.12</rat.plugin.version>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencyManagement>
@@ -241,6 +242,21 @@
   </distributionManagement>
 
   <repositories>
+    <repository>
+      <id>apache</id>
+      <url>https://repository.apache.org/content/repositories/releases/</url>
+      <snapshots> 
+        <enabled>false</enabled>
+      </snapshots> 
+    </repository>
+    <repository>
+      <id>apache.snapshots</id>
+      <name>Apache snapshots repository</name> 
+      <url>http://repository.apache.org/content/groups/snapshots</url> 
+      <snapshots> 
+        <enabled>true</enabled>
+      </snapshots> 
+    </repository>
     <repository>
       <id>spring-snapshots</id>
       <name>Spring Snapshots</name>
