--- a/log4j-core-test/src/test/resources/log4j-routing.properties
+++ b/log4j-core-test/src/test/resources/log4j-routing.properties
@@ -16,8 +16,6 @@
 status = error
 name = RoutingTest
 
-property.filename = target/routing1/routingtestProps-$${sd:type}.log
-
 filter.threshold.type = ThresholdFilter
 filter.threshold.level = debug
 
@@ -33,7 +31,7 @@ appender.routing.routes.pattern = $${sd:type}
 appender.routing.routes.route1.type = Route
 appender.routing.routes.route1.rolling.type = RollingFile
 appender.routing.routes.route1.rolling.name = Routing-${sd:type}
-appender.routing.routes.route1.rolling.fileName = ${filename}
+appender.routing.routes.route1.rolling.fileName = target/routing1/routingtestProps-${sd:type}.log
 appender.routing.routes.route1.rolling.filePattern = target/routing1/test1-${sd:type}.%i.log.gz
 appender.routing.routes.route1.rolling.layout.type = PatternLayout
 appender.routing.routes.route1.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
