Make sure we do not cause can error when converting a filter attribute.

--- a/log4j-1.2-api/src/test/resources/LOG4J2-3247.properties
+++ b/log4j-1.2-api/src/test/resources/LOG4J2-3247.properties
@@ -16,6 +16,7 @@
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.filter.1=org.apache.log4j.config.ZeroFilterFixture
+log4j.appender.CONSOLE.filter.1.onMatch=neutral
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
