--- a/pom.xml
+++ b/pom.xml
@@ -181,9 +181,10 @@
   <properties>
     <!-- make sure to update these for each release! -->
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.12.2</Log4jReleaseVersion>
+    <Log4jReleaseVersion>2.12.3</Log4jReleaseVersion>
     <Log4jReleaseManager>Ralph Goers</Log4jReleaseManager>
     <Log4jReleaseKey>B3D8E1BA</Log4jReleaseKey>
+    <Log4jSigningUserName>rgoers@apache.org</Log4jSigningUserName>
     <!--<Log4jReleaseManager>Matt Sicker</Log4jReleaseManager> -->
     <!--<Log4jReleaseKey>748F15B2CF9BA8F024155E6ED7C92B70FA1C814D</Log4jReleaseKey> -->
     <!-- note that any properties you want available in velocity templates must not use periods! -->
@@ -1234,6 +1235,7 @@
             </charter>
             <pmc>https://logging.apache.org</pmc>
           </asfExtOptions>
+          <skip>true</skip>
         </configuration>
         <executions>
           <execution>
