--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
@@ -21,7 +21,7 @@
   <groupId>org.apache.logging.log4j.samples</groupId>
   <artifactId>log4j-spring-cloud-config-sample-server</artifactId>
   <packaging>jar</packaging>
-  <version>2.12.3-SNAPSHOT</version>
+  <version>2.12.3</version>
 
   <name>Log4j Sample Configuration Service</name>
   <description>Sample Cloud Config Server</description>
@@ -317,6 +317,6 @@
 
 
   <scm>
-    <tag>log4j-2.12.1-rc1</tag>
+    <tag>log4j-2.12.3-rc1</tag>
   </scm>
 </project>
