--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
   <properties>
     <!-- make sure to update these for each release! -->
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.3</Log4jReleaseVersion>
+    <Log4jReleaseVersion>2.3.1</Log4jReleaseVersion>
     <Log4jReleaseCount>eighteenth</Log4jReleaseCount>
     <Log4jReleaseManager>Ralph Goers</Log4jReleaseManager>
     <Log4jReleaseKey>B3D8E1BA</Log4jReleaseKey>
@@ -1253,6 +1253,7 @@
                 <exclude>dist/target/**/*</exclude>
                 <exclude>src/main/resources/META-INF/services/**/*</exclude>
                 <exclude>.idea/**/*</exclude>
+                <exclude>src/ide/**</exclude>
                 <exclude>src/test/resources/**/*</exclude>
                 <exclude>src/site/resources/**/*</exclude>
                 <exclude>src/site/site.vm</exclude>
