[LOG4J2-3281] PropertiesConfiguration.buildAppender not adding filters to appender.
Test building filters from a 1.2 properties file.

--- a/log4j-1.2-api/src/test/resources/LOG4J2-3247.properties
+++ b/log4j-1.2-api/src/test/resources/LOG4J2-3247.properties
@@ -15,7 +15,7 @@
 
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.filter.1=org.apache.log4j.config.ZeroFilterFixture
+log4j.appender.CONSOLE.filter.1=org.apache.log4j.config.NeutralFilterFixture
 log4j.appender.CONSOLE.filter.1.onMatch=neutral
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
