Make builds reproducible bit-for-bit.
See https://maven.apache.org/guides/mini/guide-reproducible-builds.html

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.doap.skip>false</maven.doap.skip>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- See https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
+    <project.build.outputTimestamp>10</project.build.outputTimestamp>
     <docLabel>Site Documentation</docLabel>
     <projectDir />
     <commonsLoggingVersion>1.2</commonsLoggingVersion>
