--- a/pom.xml
+++ b/pom.xml
@@ -154,13 +154,11 @@
   <properties>
     <!-- make sure to update these for each release! -->
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.3.1</Log4jReleaseVersion>
-    <Log4jReleaseCount>eighteenth</Log4jReleaseCount>
-    <Log4jReleaseManager>Ralph Goers</Log4jReleaseManager>
-    <Log4jReleaseKey>B3D8E1BA</Log4jReleaseKey>
-    <Log4jSigningUserName>rgoers@apache.org</Log4jSigningUserName>
-    <!-- <Log4jReleaseManager>Matt Sicker</Log4jReleaseManager>
+    <Log4jReleaseVersion>2.3.2</Log4jReleaseVersion>
+    <Log4jReleaseCount>next</Log4jReleaseCount>
+    <Log4jReleaseManager>Matt Sicker</Log4jReleaseManager>
     <Log4jReleaseKey>FA1C814D</Log4jReleaseKey> -->
+    <Log4jSigningUserName>mattsicker@apache.org</Log4jSigningUserName>
     <!-- note that any properties you want available in velocity templates must not use periods! -->
     <slf4jVersion>1.7.12</slf4jVersion>
     <logbackVersion>1.1.3</logbackVersion>
