--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
     <Log4jReleaseVersion>2.3.2</Log4jReleaseVersion>
     <Log4jReleaseCount>next</Log4jReleaseCount>
     <Log4jReleaseManager>Matt Sicker</Log4jReleaseManager>
-    <Log4jReleaseKey>FA1C814D</Log4jReleaseKey> -->
+    <Log4jReleaseKey>FA1C814D</Log4jReleaseKey>
     <Log4jSigningUserName>mattsicker@apache.org</Log4jSigningUserName>
     <!-- note that any properties you want available in velocity templates must not use periods! -->
     <slf4jVersion>1.7.12</slf4jVersion>
