Turn RAT one once it passes, not before.

--- a/pom.xml
+++ b/pom.xml
@@ -1465,6 +1465,7 @@
             <exclude>**/MANIFEST.MF</exclude>
           </excludes>
         </configuration>
+        <!-- Turn this one once it passes, not before.
         <executions>
           <execution>
             <phase>verify</phase>
@@ -1473,6 +1474,7 @@
             </goals>
           </execution>
         </executions>
+        -->
       </plugin>
       <!-- DOAP (RDF) metadata generation -->
       <plugin>
@@ -1869,6 +1871,7 @@
                 <exclude>**/MANIFEST.MF</exclude>
               </excludes>
             </configuration>
+            <!-- Turn this one once it passes, not before.
             <executions>
               <execution>
                 <phase>verify</phase>
@@ -1877,6 +1880,7 @@
                 </goals>
               </execution>
             </executions>
+            -->
           </plugin>
         </plugins>
       </build>
