[LOG4J2-3316] Log4j 1.2 bridge should ignore case in properties file keys.

--- a/log4j-1.2-api/pom.xml
+++ b/log4j-1.2-api/pom.xml
@@ -46,6 +46,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
+      <scope>test</scope>
     </dependency>
     <!-- Place Felix before Equinox because Felix is signed. -->
     <dependency>
